--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/alex-117/review-app#readme",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.1"
   }
 }
