--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   },
   "homepage": "https://github.com/alex-117/review-app#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.1"
   }
